Fix the top background so menu is always visible

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -14,6 +14,9 @@ body
   padding: 20px
   background-color: #333333
   height: 110px
+  z-index: 200
+  position: fixed
+  width: 100%
 
 .content .taglist
   list-style: none
